// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MFE Host App Generator should generate a host mfe app with a remote 1`] = `
"const { withModuleFederation } = require('@nrwl/angular/module-federation');
module.exports = withModuleFederation({
  name: 'remote',
  exposes: {
    './Module': 'apps/remote/src/app/remote-entry/entry.module.ts',
  },
});"
`;

exports[`MFE Host App Generator should generate a host mfe app with a remote 2`] = `
"const { withModuleFederation } = require('@nrwl/angular/module-federation');
module.exports = withModuleFederation({
  name: 'test',
  remotes: ['remote',]
});"
`;

exports[`MFE Host App Generator should generate a host mfe app with no remotes 1`] = `
"const { withModuleFederation } = require('@nrwl/angular/module-federation');
module.exports = withModuleFederation({
  name: 'test',
  remotes: []
});"
`;
